--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
   </head>
 
   <body>
+
+    <% if logged_in? %>
+      <%= link_to "Sign Out", signout_path, method: :delete %>
+    <% else %>
+      <%= link_to "Sign in", signin_path %>
+    <% end %>
+
+
+    <% flash.each do |key, value| %>
+      <em><%= value %></em>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
