updated reviews and trucks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <% else %>
       <%= link_to "Sign in", signin_path %>
     <% end %>
+      <%= link_to "Search Foodtrucks", trucks_path %>
 
 
     <% flash.each do |key, value| %>
