--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<p><%= button_to "Delete User", { action: "destroy", id: @user.id }, method: :delete, data: { confirm: "Delete User?" } %></p>
+<p><%= button_to "Delete User", { action: "destroy", id: @user.id }, method: :delete, data: { confirm: "Are you sure you want to delete User?" } %></p>
 <p><%= button_to "Update User", { action: "edit", id: @user.id }, method: :get %></p>
 
 <h1>Welcome <%= @user.full_name%>!</h1>
