--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -42,3 +42,12 @@
 
   <%= f.submit %>
 <% end %>
+
+
+<div id="map">
+    <img src="https://maps.googleapis.com/maps/api/staticmap?center=10019&zoom=13&size=600x300&maptype=roadmap
+&markers=color:red%7Clabel:C%7C300+West+55th+Street,New+York,NY
+&key=AIzaSyBcQBWJhUdprvVfhh4CAmwY7ixtNbaQGvc" alt="" />
+</div>
+
+<img src="http://foodtruckfiesta.com/wp-content/uploads/2012/11/caribbean-cafe-truck.jpg" alt="">
