--- a/app/views/trucks/show.html.erb
+++ b/app/views/trucks/show.html.erb
@@ -1,58 +1,70 @@
-<h1><%= @truck.name %></h1>
-<h3><%= @truck.category.name %></h3>
-<h3>Rating: <%= @truck.rating %></h3>
-
-
-
-<h3>Menu:</h3>
+<%# heading %>
 <div class="">
-  <table style="border: 1px solid black; width:25%; align:left">
-      <tr>
-        <th align="left">Menu items</th>
-        <th align="left">Price</th>
-      </tr>
-    <% @truck.items.each do |item| %>
-      <tr>
-        <td><%= item.name %></td>
-        <td>$<%= item.price %></td>
-      </tr>
+  <h1><%= @truck.name %></h1>
+  <h3><%= @truck.category.name %></h3>
+  <h3>Rating: <%= @truck.rating %></h3>
+  <img src="<%= "#{@truck.img_url}" %>" alt="" style="width:800px;height:400px;">
+  <h3><%= @truck.description %></h3>
+</div>
+
+<%# favorite/unfavorite buttton %>
+<div class="">
+  <% if Favorite.find_by(user_id: current_user.id, truck_id: @truck.id) %>
+    <%= form_tag favorite_path(@truck), method: 'delete' do %>
+      <%= submit_tag value="Remove From Favorites" %>
+      <% end %>
+  <% else %>
+    <%= form_tag favorites_path do %>
+      <%= submit_tag value="Add to Favorites" %>
     <% end %>
-  </table>
+  <% end %>
+</div>
+
+<%# Menu %>
+<div class="">
+  <h3>Menu:</h3>
+    <table style="border: 1px solid black; width:25%; align:left">
+        <tr>
+          <th align="left">Menu items</th>
+          <th align="left">Price</th>
+        </tr>
+      <% @truck.items.each do |item| %>
+        <tr>
+          <td><%= item.name %></td>
+          <td>$<%= item.price %></td>
+        </tr>
+      <% end %>
+    </table>
 </div>
 
 
-<% if Favorite.find_by(user_id: current_user.id, truck_id: @truck.id) %>
-  <%= form_tag favorite_path(@truck), method: 'delete' do %>
-    <%= submit_tag value="Remove From Favorites" %>
+<%# Review Button %>
+<div class="button">
+  <% if !Review.find_by(user_id: current_user.id, truck_id: @truck.id) %>
+    <form method="get" action="/reviews/new" >
+      <input type="submit" value="Write a Review">
+    </form>
+  <% end %>
+</div>
+
+
+<%# Show all Reviews %>
+<div class="">
+  <% if @truck.reviews.empty? %>
+
+    <h4>No reviews yet. Be the first to write a review!</h4>
+
+  <% else %>
+
+    <h3>Reviews</h3>
+    <% @truck.reviews.each do |review| %>
+      <div class="review">
+        <h5><%= review.title %></h5>
+        <h6><%= review.user.username %></h6>
+        <p><%= review.content %></p>
+      </div>
     <% end %>
-<% else %>
-  <%= form_tag favorites_path do %>
-    <%= submit_tag value="Add to Favorites" %>
-  <% end %>
-<% end %>
-
-
-<% if !Review.find_by(user_id: current_user.id, truck_id: @truck.id) %>
-  <form method="get" action="/reviews/new" >
-    <input type="submit" value="Write a Review">
-  </form>
-<% end %>
-
-<% if @truck.reviews.empty? %>
-
-  <h4>No reviews yet. Be the first to write a review!</h4>
-
-<% else %>
-
-  <h3>Reviews</h3>
-  <% @truck.reviews.each do |review| %>
-    <div class="review">
-      <h5><%= review.title %></h5>
-      <h6><%= review.user.username %></h6>
-      <p><%= review.content %></p>
-    </div>
-  <% end %>
-
+</div>
 
 
 
