--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 <h3>You're Favorite Trucks</h3>
 
 <div class="">
-  <table style="border: 1px solid black; width:25%; align:left">
+  <table class="table table-striped">
       <tr>
         <th align="left">Truck</th>
         <th align="left">Rating</th>
