--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,15 @@
-<p><%= button_to "Delete User", { action: "destroy", id: @user.id }, method: :delete, data: { confirm: "Are you sure you want to delete User?" } %></p>
-<p><%= button_to "Update User", { action: "edit", id: @user.id }, method: :get %></p>
 
-<h1>Welcome <%= @user.full_name%>!</h1>
+<%= button_to "Delete User", { action: "destroy", id: @user.id }, method: :delete, data: { confirm: "Are you sure you want to delete User?" }, class: "btn btn-sm white theme-background user-show-btn" %>
+<br>
+<br>
+<%= button_to "Update User", { action: "edit", id: @user.id }, method: :get, class: "btn btn-sm white theme-background user-show-btn" %>
+<br>
+<br>
+<h1>Welcome <%= @user.full_name%></h1>
 
+<br>
 <h3>You're Favorite Trucks</h3>
-
+<br>
 <div class="">
   <table class="table table-striped">
       <tr>
@@ -15,7 +20,14 @@
     <% @user.trucks.each do |truck| %>
       <tr>
         <td><%= link_to truck.name, truck_path(truck)%></td>
-        <td><%= @user.get_rating(truck)%></td>
+        <td>
+          <% @user.get_rating(truck).times do %>
+            <span class="glyphicon glyphicon-star"></span>
+          <% end %>
+          <% (5 - @user.get_rating(truck)).times do %>
+            <span class="glyphicon glyphicon-star-empty"></span>
+          <% end %>
+        </td>
         <td><%= truck.category.name%></td>
       </tr>
     <% end %>
