--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,7 +25,7 @@
   <%= f.fields_for :location do |addr| %>
     <%= addr.label :street_address %>:
     <%= addr.text_field :street_address %><br>
-
+    <%= "hello" %>
     <%= addr.label :city %>:
     <%= addr.text_field :city %><br>
 
