--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -10,7 +10,7 @@
 
   <div>
     <%= f.label :content %><br>
-    <%= f.text_area :content %><br>
+    <%= f.text_area :content, cols: 30, rows: 10%><br>
     <br>
   </div>
 
@@ -24,5 +24,6 @@
   </div>
 
   <%= f.submit 'Post Review' %>
+
 
 <% end %>
