adds solution for user show apge issue being able to see other users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   </head>
 
-  <body >
+  <body style="background-color: #e3f3f9;">
 
     <nav class="navbar navbar-light navbar-static-top" style="background-color: #8e2222">
       <div class="container-fluid">
