--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <h1>Welcome <%= @user.full_name%></h1>
 
 <br>
-<h3>You're Favorite Trucks</h3>
+<h3>Your Favorite Trucks</h3>
 <br>
 <div class="">
   <table class="table table-striped">
