added seed data

--- a/app/views/trucks/show.html.erb
+++ b/app/views/trucks/show.html.erb
@@ -44,9 +44,11 @@
 
 
 <%# Menu %>
+
+<h3>Menu:</h3>
+<br>
 <div class="table">
-  <h3>Menu:</h3>
-    <table style="border: 1px solid black; width:50%; align:center">
+    <table style="width:40%; align:center" class ="table table-striped">
         <tr>
           <th align="left">Menu items</th>
           <th align="left">Price</th>
@@ -59,6 +61,8 @@
       <% end %>
     </table>
 </div>
+<br>
+<br>
 
 
 <%# Review Button %>
