--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,28 +1,47 @@
 <h1><%= @truck.name %></h1>
-
+<br>
 <%= form_for @review do |f| %>
 
   <div>
     <%= f.label :title %><br>
-    <%= f.text_field :title %><br>
+    <%= f.text_field :title, class: "review-title" %><br>
     <br>
   </div>
 
   <div>
     <%= f.label :content %><br>
-    <%= f.text_area :content, cols: 30, rows: 10%><br>
+    <%= f.text_area :content, class: "review-content"%><br>
     <br>
   </div>
 
   <div>
-    <%= f.label :rating %><br>
-    <%= f.radio_button :rating, 1 %>
+    <%= f.label :rating %>
+    <br>
+    <!-- <%= f.radio_button :rating, 1 %>
     <%= f.radio_button :rating, 2 %>
     <%= f.radio_button :rating, 3 %>
     <%= f.radio_button :rating, 4 %>
-    <%= f.radio_button :rating, 5 %>
+    <%= f.radio_button :rating, 5 %> -->
+    <label for="myChoice1">1<br />
+      <input type="radio" id="myChoice1" name="review[rating]" value="1" />
+    </label>
+
+    <input type="radio" id="myChoice2" name="review[rating]" value="2" />
+
+    <!-- <label for="myChoice2">2<br />
+      <input type="radio" id="myChoice2" name="myChoice" value="2" />
+    </label> -->
+
+    <input type="radio" id="myChoice3" name="review[rating]" value="3" />
+
+    <input type="radio" id="myChoice4" name="review[rating]" value="4" />
+
+    <label for="myChoice1">5<br />
+      <input type="radio" id="myChoice5" name="review[rating]" value="5" />
+    </label>
   </div>
 
+  <br>
   <%= f.submit 'Post Review' %>
 
 
