--- a/app/views/trucks/index.html.erb
+++ b/app/views/trucks/index.html.erb
@@ -1,82 +1,61 @@
 
 <%# search bar%>
-<div class="normal-input">
-  <%= form_tag('/trucks', method: 'get') do %>
-    <%= label_tag 'Zip Code' %>
-    <%= text_field_tag 'zip' %>
-    <br>
-    <button type="submit" class="btn btn-default btn-sm theme-background white">
-      <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
-    </button>
-  <% end %>
-</div>
-
-<%# search results header%>
-<hgroup class="row mb20">
-		<h1>Search Results</h1>
-		<h2 class="lead"><%= @trucks.count %> food trucks were found in your area</h2>
+<hgroup class="row">
+  <h2>Search Food Trucks By Zip Code</h2>
 </hgroup>
 
-  <%# map %>
-  <div class="col-l-12 img-fluid" style="text-align: center;">
-        <img src=<%= @url %> alt="">
-  </div>
 
-  <br>
-  <br>
-<!--
-  <%# results list%>
-  <article class="row float-left">
-    <% @trucks.each_with_index do |tr, i| %>
+<form class="navbar-form navbar-left" role="search" action="/trucks" method='get' >
+    <div class="form-group">
+        <input name="zip" type="text" class="form-control" placeholder="Zip Code">
+    </div>
+    <button type="submit" class="btn btn-default">
+        <span class="glyphicon glyphicon-search"></span>
+    </button>
+</form>
 
-      <%# photo %>
-        <div class="col-md-3">
-          <a class="thumbnail"><img src="<%= "#{tr.img_url}" %>" alt="" ></a>
+<br>
+<br>
+<br>
+
+<%# search results header%>
+<%# url is blank where no search was run yet%>
+<% if @url %>
+  <hgroup class="row">
+  		<h2 class="lead"><%= @trucks.count %> food trucks were found in your area</h2>
+  </hgroup>
+<% end %>
+
+<%# map - only shows after search - otherise url is nil %>
+<div class="col-l-12 img-fluid" style="text-align: center;">
+      <img src=<%= @url %> alt="">
+</div>
+
+<br>
+<br>
+
+<div class="row row-margin-bottom">
+
+  <% @trucks.each_with_index do |tr, i| %>
+    <div class="col-md-5 no-padding lib-item" data-category="view">
+        <div class="lib-panel">
+            <div class="row box-shadow">
+                <div class="col-md-6">
+                    <a href="<%= truck_path(tr) %>"><img class="lib-img-show" src="<%= "#{tr.img_url}" %>" height="160" width="200"></a>
+                </div>
+                <div class="col-md-6">
+                    <div class="lib-row lib-header">
+                        <h5><%= "#{i+1}. " %><%= link_to tr.name, truck_path(tr) %></span></h5>
+                        <div class="lib-header-seperator"></div>
+                    </div>
+                    <div class="lib-row lib-desc">
+                      <%= tr.location.street_address %><br>
+                      <%= tr.category.name %><br>
+                      <%= tr.rating %>
+                    </div>
+                </div>
+            </div>
         </div>
-
-      <%# info %>
-        <div class="col-md-2">
-          <ul class="meta-search">
-            <li><i></i> <span><%= "#{i+1}. " %></span></li>
-            <li><i></i> <span><%= link_to tr.name, truck_path(tr) %></span></li>
-            <li><i></i> <span><%= tr.location.street_address %></span></li>
-            <li><i></i> <span><%= tr.rating %></span></li>
-            <li><i></i> <span><%= tr.category.name %></span></li>
-          </ul>
-        </div>
-      <% end %>
-
-
-  </article>
-  <span class="clearfix borda"></span>
-</section> -->
-
-
-
-
-            <div class="row row-margin-bottom">
-
-            <% @trucks.each_with_index do |tr, i| %>
-              <div class="col-md-5 no-padding lib-item" data-category="view">
-                  <div class="lib-panel">
-                      <div class="row box-shadow">
-                          <div class="col-md-6">
-                              <a href="<%= truck_path(tr) %>"><img class="lib-img-show" src="<%= "#{tr.img_url}" %>" height="160" width="200"></a>
-                          </div>
-                          <div class="col-md-6">
-                              <div class="lib-row lib-header">
-                                  <h5><%= "#{i+1}. " %><%= link_to tr.name, truck_path(tr) %></span></h5>
-                                  <div class="lib-header-seperator"></div>
-                              </div>
-                              <div class="lib-row lib-desc">
-                                <%= tr.location.street_address %><br>
-                                <%= tr.category.name %><br>
-                                <%= tr.rating %>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-1"></div>
-              <% end %>
-        </div>
+    </div>
+  <% end %>
+</div>
