--- a/app/views/trucks/show.html.erb
+++ b/app/views/trucks/show.html.erb
@@ -1,5 +1,6 @@
-<%# heading %>
+<%# really have no idea why, but this div encloses everything from top until menu. and it seems to be doing something right so I'll keep it %>
 <div class="">
+  <%# heading %>
   <h1><%= @truck.name %></h1>
   <h3><%= @truck.category.name %></h3>
 
@@ -16,32 +17,52 @@
       </div>
   <% end %>
 
-  <%# favorite/unfavorite buttton %>
-  <div class="favorite-button">
-    <% if Favorite.find_by(user_id: current_user.id, truck_id: @truck.id) %>
-      <%= form_tag favorite_path(@truck), method: 'delete' do %>
-      <button type="submit" class="btn btn-default btn-lg">
-        <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Unfavorite
-      </button>
-        <% end %>
-    <% else %>
-      <%= form_tag favorites_path do %>
+  <%# This row includes favorite and review buttons %>
+  <div class="row">
+    <%# favorite/unfavorite buttton %>
+    <div class="favorite-button col-md-2 no-padding">
+      <% if Favorite.find_by(user_id: current_user.id, truck_id: @truck.id) %>
+        <%= form_tag favorite_path(@truck), method: 'delete' do %>
         <button type="submit" class="btn btn-default btn-lg">
-          <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> Favorite
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Unfavorite
         </button>
+          <% end %>
+      <% else %>
+        <%= form_tag favorites_path do %>
+          <button type="submit" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> Favorite
+          </button>
+        <% end %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
+
+    <%# Review Button %>
+    <div class="button col-md-2 no-padding">
+      <% if !Review.find_by(user_id: current_user.id, truck_id: @truck.id) %>
+        <form method="get" action="/reviews/new" >
+          <button type="submit" class="btn btn-default btn-lg theme-background white">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Write A Review
+          </button>
+        </form>
+      <% end %>
+    </div>
+  </div><%# end buttons div %>
 
   <br>
+
+  <%# large truck img %>
   <div class="" style='text-align: center;'>
     <img src="<%= "#{@truck.img_url}" %>" alt="" style="width:900px;height:500px;">
   </div>
+
   <br>
   <br>
+
   <h3><%= @truck.description %></h3>
+
 </div>
 
+<br>
 
 <%# Menu %>
 
@@ -61,23 +82,13 @@
       <% end %>
     </table>
 </div>
+
 <br>
 <br>
-
-
-<%# Review Button %>
-<div class="button">
-  <% if !Review.find_by(user_id: current_user.id, truck_id: @truck.id) %>
-    <form method="get" action="/reviews/new" >
-      <input type="submit" value="Write a Review">
-    </form>
-  <% end %>
-</div>
-
+<br>
+<br>
 
 <%# Show all Reviews %>
-<br>
-<br>
 <div class="">
   <% if @truck.reviews.empty? %>
 
@@ -85,28 +96,25 @@
 
   <% else %>
 
-  <div class="" style="text-align: center;"><h2>Reviews</h2></div>
-  <% @truck.reviews.each do |review| %>
-  <div class="reviews">
-    <div class="row blockquote review-item">
-      <div class="col-md-3 text-center">
-        <img class="rounded-circle reviewer" src="http://standaloneinstaller.com/upload/avatar.png">
-        <div class="caption">
-          <small>by <a href="#joe"><%= review.user.username %></a></small>
-        </div>
+    <div class="" style="text-align: center;"><h2>Reviews</h2></div>
+    <% @truck.reviews.each do |review| %>
+        <div class="reviews">
+          <div class="row blockquote review-item">
+            <div class="col-md-3 text-center">
+              <img class="rounded-circle reviewer" src="http://standaloneinstaller.com/upload/avatar.png">
+              <div class="caption">
+                <small>by <a href="#joe"><%= review.user.username %></a></small>
+              </div>
 
-      </div>
-      <div class="col-md-9">
-        <h4><%= review.title %></h4>
-        <div class="ratebox text-center" data-id="0" data-rating="5"></div>
-        <p class="review-text"><%= review.content %></p>
-      </div>
-    </div>
-  </div>
+            </div>
+            <div class="col-md-9">
+              <h4><%= review.title %></h4>
+              <div class="ratebox text-center" data-id="0" data-rating="5"></div>
+              <p class="review-text"><%= review.content %></p>
+            </div>
+          </div>
+        </div>
+    <% end %>
   <% end %>
 
 </div>
-
-
-
-<% end %>
